<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".about">

    <TextView
        android:id="@+id/text_about"
        android:paddingTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:text="@string/about"
        android:textSize= "30sp"
        android:layout_centerHorizontal="true"
        />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/fotoku"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/profil"
        android:layout_below="@+id/text_about" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/desc_about"
        android:text="@string/aldiansyah"
        android:layout_below="@+id/fotoku"
        android:layout_centerHorizontal="true"
        android:paddingTop="40dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/email"
        android:text="@string/email"
        android:layout_below="@+id/fotoku"
        android:layout_centerHorizontal="true"
        android:paddingTop="60dp"/>


</RelativeLayout>